--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Ultra-runner and adventurer<br>1,049-mile Iditarod Trail Invitational Course Record Holder and 10x finisher<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white display-4" href="page4.html">RUNNING RESUME</a> <a class="btn btn-md btn-white display-4" href="page3.html">MY BOOK</a> <a class="btn btn-md btn-white display-4" href="page2.html">SPEAKING</a>
-                    <a class="btn btn-md btn-white display-4" href="page5.html">PRESS</a> <a class="btn btn-md btn-success display-4" href="page6.html">IRONDOG 2020 TRACKER</a> <a class="btn btn-md btn-white display-4" href="page7.html">CONTACT</a></div>
+                    <a class="btn btn-md btn-white display-4" href="page5.html">PRESS</a> <a class="btn btn-md btn-success display-4" href="page6.html">HEWITT RUNS ALASKA 2020 TRACKER</a> <a class="btn btn-md btn-white display-4" href="page7.html">CONTACT</a></div>
             </div>
         </div>
     </div>
@@ -44,7 +44,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/e">make a site</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
