--- a/hewittrunsalaska2020.html
+++ b/hewittrunsalaska2020.html
@@ -44,24 +44,24 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="index.html">
+                    <a class="nav-link link text-black display-4" href="home.html">
                         Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        Resume</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        Book</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="resume.html">
+                        Resume</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="book.html">
+                        Book</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="speaking.html">
                         Speaking</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="page5.html">
+                    <a class="nav-link link text-black display-4" href="press.html">
                         Press</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page6.html">
-                        Irondog 2020</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page7.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="hewittrunsalaska2020.html">
+                        Hewitt Runs Alaska 2020</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="contact.html">
                         Contact</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-rNCyujMS8d" id="content5-2x">
+<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="mbr-section content5 cid-rNCyujMS8d" id="content5-2x">
 
     
 
