renamed home to index

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     TIM HEWITT</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Ultra-runner and adventurer<br>1,049-mile Iditarod Trail Invitational Course Record Holder and 10x finisher<br></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-4" href="page4.html">RUNNING RESUME</a> <a class="btn btn-md btn-white display-4" href="page3.html">MY BOOK</a> <a class="btn btn-md btn-white display-4" href="page2.html">SPEAKING</a>
-                    <a class="btn btn-md btn-white display-4" href="page5.html">PRESS</a> <a class="btn btn-md btn-success display-4" href="page6.html">IRONDOG 2020 TRACKER</a> <a class="btn btn-md btn-white display-4" href="page7.html">CONTACT</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white display-4" href="resume.html">RUNNING RESUME</a> <a class="btn btn-md btn-white display-4" href="book.html">MY BOOK</a> <a class="btn btn-md btn-white display-4" href="speaking.html">SPEAKING</a>
+                    <a class="btn btn-md btn-white display-4" href="press.html">PRESS</a> <a class="btn btn-md btn-success display-4" href="hewittrunsalaska2020.html">HEWITT RUNS ALASKA 2020 TRACKER</a> <a class="btn btn-md btn-white display-4" href="contact.html">CONTACT</a></div>
             </div>
         </div>
     </div>
