--- a/resume.html
+++ b/resume.html
@@ -47,21 +47,21 @@
                     <a class="nav-link link text-black display-4" href="home.html">
                         Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="resume.html">
-                        Resume</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="book.html">
-                        Book</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="speaking.html">
+                        Resume</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top">
+                        Book</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top">
                         Speaking</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="press.html">
+                    <a class="nav-link link text-black display-4" href="#top">
                         Press</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="hewittrunsalaska2020.html">
-                        Hewitt Runs Alaska 2020</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="contact.html">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top">
+                        Hewitt Runs Alaska 2020</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top">
                         Contact</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content5 cid-rNCxDDkfzr" id="content5-2u">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-rNCxDDkfzr" id="content5-2u">
 
     
 
