fixed link from main page to tracker page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Ultra-runner and adventurer<br>1,049-mile Iditarod Trail Invitational Course Record Holder and 10x finisher<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white display-4" href="resume.html">RUNNING RESUME</a> <a class="btn btn-md btn-white display-4" href="book.html">MY BOOK</a> <a class="btn btn-md btn-white display-4" href="speaking.html">SPEAKING</a>
-                    <a class="btn btn-md btn-white display-4" href="press.html">PRESS</a> <a class="btn btn-md btn-success display-4" href="hewittrunsalaska2020.html">IRON DOG HEWITT TRACKER</a> <a class="btn btn-md btn-white display-4" href="contact.html">CONTACT</a></div>
+                    <a class="btn btn-md btn-white display-4" href="press.html">PRESS</a> <a class="btn btn-md btn-success display-4" href="irondoghewitt.html">IRON DOG HEWITT TRACKER</a> <a class="btn btn-md btn-white display-4" href="contact.html">CONTACT</a></div>
             </div>
         </div>
     </div>
@@ -44,7 +44,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
